--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
           echo "Testing if the server is up..."
           sudo apt-get update && sudo apt-get install -y curl
           sleep 10
-          bash -c '[[ $(curl -s -o /dev/null -w "%{http_code}" http://localhost:81) == "200" ]]'
+          bash -c '[[ $(curl -s -o /dev/null -w "%{http_code}" http://103.172.26.37:81) == "200" ]]'
