--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,43 @@
-name: CI Pipeline
+name: CI
+on: [push]
 
-on: [push, pull_request]
+env:
+  DOCKER_IMAGE: sammreen
+  DOCKER_TAG: latest  
 
 jobs:
   build:
     runs-on: self-hosted
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
-      
+        
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        
       - name: Build Docker image
-        run: |
-          echo "Building Docker image..."
-          docker build -t sammreen .
+        run: docker build -t ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }} .
+        
+      - name: Push Docker image
+        run: docker push ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
 
   deploy:
     runs-on: self-hosted
     needs: build
-    steps:     
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        
       - name: Deploy Docker container
         run: |
-          echo "Deploying Docker container..."
           docker stop sammreen || true
           docker rm sammreen || true
-          docker run -d --name sammreen -p 81:81 sammreen
+          docker run -d --name sammreen -p 81:81 ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
+          docker ps
+          docker logs sammreen
 
   test:
     runs-on: self-hosted
@@ -33,23 +47,6 @@ jobs:
     steps:
       - name: Test if the server is up
         run: |
-          echo "Waiting for the server to be up..."
-          sleep 180  
-          
-          echo "Checking server response..."
-          MAX_RETRIES=5
-          RETRY_INTERVAL=30
-
-          for i in $(seq 1 $MAX_RETRIES); do
-            RESPONSE_CODE=$(curl -s --max-time 60 -o /dev/null -w "%{http_code}" http://103.172.26.37:81)
-            if [ "$RESPONSE_CODE" -eq 200 ]; then
-              echo "Server is up and running."
-              exit 0
-            else
-              echo "Attempt $i: Server is not up. HTTP code: $RESPONSE_CODE"
-              sleep $RETRY_INTERVAL
-            fi
-          done
-          
-          echo "Server did not respond with HTTP 200 after $MAX_RETRIES attempts."
-          exit 1
+          sleep 180  # Increase sleep time to allow the server to be ready
+          curl -v http://103.172.26.37:81 || true
+          test $(curl -s -o /dev/null -w "%{http_code}" http://103.172.26.37:81) -eq 200
